letter spacing fixes

--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -9,6 +9,7 @@
   font-size: var(--fs-h1);
   line-height: var(--lh-h1);
   letter-spacing: var(--ls-h1);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -17,6 +18,7 @@
   font-size: var(--fs-h2);
   line-height: var(--lh-h2);
   letter-spacing: var(--ls-h2);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -25,6 +27,7 @@
   font-size: var(--fs-h3);
   line-height: var(--lh-h3);
   letter-spacing: var(--ls-h3);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -33,6 +36,7 @@
   font-size: var(--fs-h4);
   line-height: var(--lh-h4);
   letter-spacing: var(--ls-h4);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -41,6 +45,7 @@
   font-size: var(--fs-h5);
   line-height: var(--lh-h5);
   letter-spacing: var(--ls-h5);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -49,6 +54,7 @@
   font-size: var(--fs-h6);
   line-height: var(--lh-h6);
   letter-spacing: var(--ls-h6);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -57,6 +63,7 @@
   font-size: var(--fs-h7);
   line-height: var(--lh-h7);
   letter-spacing: var(--ls-h7);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -65,6 +72,7 @@
   font-size: var(--fs-t1);
   line-height: var(--lh-t1);
   letter-spacing: var(--ls-t1);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -73,6 +81,7 @@
   font-size: var(--fs-t2);
   line-height: var(--lh-t2);
   letter-spacing: var(--ls-t2);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -81,6 +90,7 @@
   font-size: var(--fs-t3);
   line-height: var(--lh-t3);
   letter-spacing: var(--ls-t3);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -89,6 +99,7 @@
   font-family: var(--font-body);
   font-size: var(--fs-t4);
   line-height: var(--lh-t4);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -97,6 +108,7 @@
   font-family: var(--font-mono);
   font-size: var(--fs-n1);
   line-height: var(--lh-n1);
+  font-weight: var(--fw-regular);
   text-transform: uppercase;
   margin: 0;
 }
@@ -114,6 +126,7 @@
   font-family: var(--font-mono);
   font-size: var(--fs-n2);
   line-height: var(--lh-n2);
+  font-weight: var(--fw-regular);
   margin: 0;
 }
 
@@ -130,6 +143,7 @@
 .t-n3 {
   font-family: var(--font-mono);
   font-size: var(--fs-n3);
+  font-weight: var(--fw-regular);
   line-height: var(--lh-n3);
   margin: 0;
 }
@@ -194,6 +208,7 @@
   font-family: var(--font-mono);
   font-size: var(--fs-nav3);
   line-height: var(--lh-nav3);
+  font-weight: var(--fw-regular);
   text-transform: uppercase;
   margin: 0;
 }
